# learn-django

./: .gitignore  pyproject.toml  requirements.txt
storefront/: .gitignore
storefront/likes/migrations/: 0001_initial.py
storefront/playground/: views.py
storefront/playground/templates/: hello.html
storefront/store/: admin.py  models.py  serializers.py  urls.py  views.py
storefront/store/migrations/: 0001_initial.py  0002_alter_collection_options_alter_customer_options_and_more.py  0003_alter_product_description_alter_product_promotions_and_more.py  0004_alter_orderitem_product_alter_product_collection_and_more.py  0005_alter_cart_id.py  0006_alter_cartitem_cart_alter_cartitem_unique_together.py
storefront/store_custom/: admin.py
storefront/storefront/: settings.py  urls.py
storefront/tags/: models.py
storefront/tags/migrations/: 0001_initial.py
weathermind-mini/: manage.py
weathermind-mini/claims/: admin.py  models.py  serializers.py  urls.py  views.py
weathermind-mini/claims/migrations/: 0001_initial.py
weathermind-mini/weathermind/: asgi.py  settings.py  urls.py  wsgi.py
