[project]
name = "learn-django"
version = "0.1.0"
description = "A Django learning project"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["storefront"]

[project.dependencies]
django = "*"